--- a/unit2/CMakeLists.txt
+++ b/unit2/CMakeLists.txt
@@ -4,4 +4,6 @@ project(main)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.cpp
+        Rectangle.cpp
+        Rectangle.h)
