--- a/unit2/CMakeLists.txt
+++ b/unit2/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(${PROJECT_NAME} main.cpp
         Rectangle.cpp
-        Rectangle.h)
+        Rectangle.h
+        Person.cpp
+        Person.h)
