--- a/unit2/CMakeLists.txt
+++ b/unit2/CMakeLists.txt
@@ -8,4 +8,6 @@ add_executable(${PROJECT_NAME} main.cpp
         Rectangle.cpp
         Rectangle.h
         Person.cpp
-        Person.h)
+        Person.h
+        SmartPointer.cpp
+        SmartPointer.h)
