--- a/unit3/CMakeLists.txt
+++ b/unit3/CMakeLists.txt
@@ -4,4 +4,8 @@ project(main)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.cpp
+        Length.cpp
+        Length.h
+        Point.cpp
+        Point.h)
